<resources>
    <string name="app_name">Тэсты па беларускай мове</string>
    <string name="question_number">Пытанне №</string>
    <string name="results_text">Пытанне: </string>
    <string name="return_button_text">Вярнуцца</string>
    <string name="enter_your_name">Увядзіце ваша імя!</string>
    <string name="name_hint">імя</string>
    <string name="cancel_button">Вярнуцца</string>
    <string name="start_button">Пачаць тэст</string>
    <string name="finish_test_button">Скончыць тэст</string>
    <string name="start_test_button">Пачаць тэст</string>
    <string name="topics_button">Тэмы</string>
    <string name="best_results_button">Лепшыя рэзультаты</string>
    <string name="rules_button">Правілы</string>
    <string name="name_warning">Увядзіце ваша імя!</string>
    <string name="name_length_warning">Не больш чым 13 сімвалаў!</string>
    <string name="rules_header_text">Правілы:</string>
    <string name="perform_best_result">Вы папали у списак лепшых рэзультатау</string>
    <string name="finish_test">Скончыць тэставанне и выйсці?</string>
    <string name="continue_text">Працягнуць</string>
    <string name="exit_text">Выйсці</string>
    <string name="notification_text">Прайсці Тэст</string>
    <string name="rules">
        Уводзіны. У сучасных усходнеславянскіх мовах характарыстыка прадмета ці
        асобы можа выяўляцца ў часе. Звычайна гэта перадаецца даданай азначальнай
        часткай складаназалежнага сказа: Над грушай, якая была ўсыпана кветкамі,
        гулі пчолы. Аднак яна лёгка замяняецца эканомнай формай — дзеепрыметным
        словазлучэннем: Над грушай, усыпанай кветкамі, гулі пчолы. Па змесце сказы
        амаль аднолькавыя, па форме ж адрозненне віда-вочнае. Дзеепрыметнік сумяшчае ў
        сабе ўласцівасці прыметніка і дзеяслова. Менавіта яму належыць, так бы мовіць,
        роля семантычнага кандэнсатара. Ён настолькі арганічна ўвайшоў у наша маўленне
        і заняў у ім трывалае месца, што бывае цяжка, а то і немагчыма, замяніць яго
        даданым ска-зам, бо згубіцца сэнс. Напрыклад: Табе, з прытомленым сэрцам,
        прысыпанаму сівізной, хочацца зноў сустрэцца здалёкай сваёй вясной (П. Панчанка).
        Уводзіны. У новай рэдакцыі "Правіл беларускай арфаграфіі і пунктуацыі" напісанню
        складанага дзеслоў-нага суфікса -ірава- (-ырава-) адведзена прыярытэтнае месца,
        што выклікана яго пашырэннем у маўленчай практыцы. Хаця нават расійскія вучоныя
        С. Абнорскі, Л. Берг, П. Кузняцоў прадказвалі недаўгавечнасць функцыянавання
        запазычанага суфікса ў рускай мове і выцясненне гэтай марфемы суфіксам -ова-.
        Прапаноўвалася нават абмяжоўваць яго выкарыстанне. Так, акадэмік Берг дзея-словы
        з суфіксамі -ирова- назваў "уродлмвымп" і прапа-ноўваў замяняць іх "правильными,
        русскими", г. зн. дзея-словамі з суфіксам -ова-.
        Прагрэсіўныя формы. Эвалюцыянуючы разам з чалавекам, мова шляхам адбору пакідае
        прагрэсіўныя формы, у якіх інфармацыя перадаецца эканомнымі сродкамі. Яшчэ ў
        агульнаславянскай мове дзеепрыметнік займаў сталае месца і, прайшоўшы гістарычны
        шлях свайго развіцця, спраўна служыць нам і па сёння. У літаратурнай мове
        найчасцей ужываюцца дзеепрыметнікі залежнага стану прошлага часу: высушаны,
        напоены, накормлены, узнагароджаны, створаны, аблюбаваны, засеяны, запалены,
        астуджаны, запрошаны. вывучаны, звіты, вымыты, вышыты, разгорнуты, праполаты,
        сагнуты і інш.
    </string>
    <string name="about_developer">Аб распрацоўніку</string>
</resources>
