<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!--
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:layoutDirection="rtl"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        -->

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/startTestButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:onClick="onClick"
            android:text="@string/start_test_button" />

        <Button
            android:id="@+id/topicButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:onClick="onClick"
            android:text="@string/topics_button" />

        <Button
            android:id="@+id/resultsButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:onClick="onClick"
            android:text="@string/best_results_button" />

        <Button
            android:id="@+id/rulesButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:onClick="onClick"
            android:text="@string/rules_button" />
    </LinearLayout>

    <Button
        android:id="@+id/developersButton"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector"
        android:onClick="onClick"
        android:text="@string/about_developer" />
</RelativeLayout>
